# ci-test

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml  build.yml.txt  code-quality.yml  hosted-ninja-vcpkg_submod.yml  tests.yml
include/: finance_manager.h  transaction.h
src/: finance_manager.cpp  main.cpp  transaction.cpp
tests/: finance_manager_test.cpp
